# matrix_mult

./: CMakeLists.txt  create_mat.c  main.c  matrix.h  multip_mat.c  print_mat.c
